--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
     "express": "~4.14.1",
+    "express-session": "^1.15.2",
     "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "mongoose": "^4.9.2",
     "morgan": "~1.7.0",
+    "node-cas-client": "^1.0.0",
     "request": "^2.81.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "session-memory-store": "^0.2.2"
   }
 }
